:hammer: | update models for swagger
